<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">

    <RelativeLayout
        style="@style/match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/match_parent_wrap_content"
            android:layout_marginTop="@dimen/twenty_dps"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/logo_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/fifty_six_sps"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tag"
            style="@style/match_parent_wrap_content"
            android:layout_below="@id/title"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/tag_line"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_dps"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/gallery"
            style="@style/wrap_content"
            android:src="@drawable/"
            android:layout_below="@id/tag"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/text"
            style="@style/wrap_content"
            android:layout_below="@id/gallery"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="@dimen/ten_dps"
            android:layout_marginRight="@dimen/ten_dps"
            android:layout_marginTop="@dimen/seventy_dps"
            android:typeface="sans"
            android:gravity="center"
            android:text="@string/intro"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/loc"
            style="@style/small_icons"
            android:layout_below="@id/text"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_marginLeft="@dimen/ten_dps"
            android:src="@drawable/loc_img" />

        <TextView
            android:id="@+id/address"
            style="@style/wrap_content"
            android:layout_below="@id/text"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_toRightOf="@id/loc"
            android:typeface="sans"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps" />

        <ImageView
            android:id="@+id/call"
            style="@style/small_icons"
            android:layout_below="@id/address"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_marginLeft="@dimen/ten_dps"
            android:src="@drawable/phone_img" />

        <TextView
            android:id="@+id/contact"
            style="@style/wrap_content"
            android:layout_below="@id/address"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_toRightOf="@id/call"
            android:typeface="sans"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps"
            android:textStyle="bold"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColorLink="@color/white"/>

        <ImageView
            android:id="@+id/web"
            style="@style/small_icons"
            android:layout_below="@id/call"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_marginLeft="@dimen/ten_dps"
            android:src="@drawable/web_img" />

        <TextView
            android:id="@+id/site"
            style="@style/wrap_content"
            android:layout_below="@id/contact"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:layout_toRightOf="@id/web"
            android:typeface="sans"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps"
            android:textStyle="bold"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColorLink="@color/white"/>

        <ImageView
            android:id="@+id/google"
            style="@style/small_icons"
            android:layout_below="@id/web"
            android:layout_marginLeft="@dimen/ten_dps"
            android:layout_marginBottom="@dimen/twenty_dps"
            android:src="@drawable/google_img" />

        <TextView
            android:id="@+id/mail"
            style="@style/wrap_content"
            android:layout_below="@id/site"
            android:layout_toRightOf="@id/google"
            android:typeface="sans"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps"
            android:textStyle="bold"
            android:autoLink="all"
            android:linksClickable="true"
            android:textColorLink="@color/white"
            android:layout_marginBottom="@dimen/thirty_dps"/>

        <TextView
            android:id="@+id/rating"
            style="@style/wrap_content"
            android:layout_below="@id/mail"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_sps"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/ten_dps"
            android:layout_marginBottom="@dimen/twenty_dps"
            />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/seventy_dps"
            android:progressTint="@color/white"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            style="@style/wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/thirty_dps"
            android:text="@string/submit" />

    </RelativeLayout>
</ScrollView>